--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -12,6 +12,8 @@
       1.1:
       <ul>
         <li>Better support for filenames in REGISTER statment (although it still requires ; at end)</li>
+        <li>Add support for RMF and SET commands</li>
+        <li>Migrate package name to org.apache.pig.plugin.idea</li>
       <ul>
 
       1.0: Initial version that supports syntax highlighting. Still missing<br>
@@ -25,7 +27,7 @@
   </change-notes>
 
   <!-- please see http://confluence.jetbrains.net/display/IDEADEV/Build+Number+Ranges for description -->
-  <idea-version since-build="107.105"/>
+  <idea-version since-build="117.798"/>
 
   <!-- please see http://confluence.jetbrains.net/display/IDEADEV/Plugin+Compatibility+with+IntelliJ+Platform+Products
        on how to target different products -->
