--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -9,6 +9,11 @@
       ]]></description>
 
   <change-notes><![CDATA[
+      1.3:
+      <ul>
+        <li>Mark plugin as available since 10.5</li>
+      </ul>
+
       1.2:
       <ul>
         <li>Fix SyntaxHighlighter bug that was causing plugin to crash in older version of IDEA (e.x. 11)</li>
@@ -43,7 +48,7 @@
   </change-notes>
 
   <!-- please see http://confluence.jetbrains.net/display/IDEADEV/Build+Number+Ranges for description -->
-  <idea-version since-build="117.798"/>
+  <idea-version since-build="107.105"/>
 
   <!-- please see http://confluence.jetbrains.net/display/IDEADEV/Plugin+Compatibility+with+IntelliJ+Platform+Products
        on how to target different products -->
