--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,8 +1,8 @@
 <idea-plugin version="2">
   <id>org.apache.pig.plugin.idea</id>
   <name>Pig</name>
-  <version>1.2</version>
-  <vendor email="rmelick@cs.hmc.edu" url="https://github.com/rmelick/intellij-pig">open source</vendor>
+  <version>1.3</version>
+  <vendor email="rmelick at cs.hmc.edu" url="https://github.com/rmelick/intellij-pig">open source</vendor>
 
   <description><![CDATA[
       A plugin for the Pig language for Hadoop.<br>
